:bug: V2.1 stylings bugs squashed

--- a/public/style/tasty.css
+++ b/public/style/tasty.css
@@ -71,7 +71,7 @@ main {
 .recipe--panel {
   width: 50%;
   height: fit-content;
-  padding-left: .75rem;
+  padding: 0 .75rem;
   border-left: 5px solid #595959;
 }
 
@@ -93,11 +93,13 @@ main {
 }
 
 @media screen and (max-width: 600px) {
-  .header, .tasty--container {
+  .header, .tasty--container, .recipe--container {
     width: 90%;
   }
 
-  .tasty--item {
+  .tasty--item, .recipe--panel {
+    padding-right: 0;
+    margin-bottom: 1rem;
     width: 100%;
   }
 }
